[project]
name = "easy-github"
version = "0.1.0"
description = ""
authors = [
    {name = "xuews",email = "lenglengzailuguan@gmail.com"}
]
readme = "README.md"
requires-python = "3.10.16"
dependencies = [
    "requests (==2.32.1)",
    "langchain (>=0.3.23,<0.4.0)",
    "langchain-deepseek (>=0.1.3,<0.2.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "gitpython (>=3.1.44,<4.0.0)",
    "jwt (>=1.3.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
